[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refcolorrestore"
version = "1.1.2"
description = "Simple color restoration with reference for Gaussian Splatting framework."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "yindaheng98", email = "yindaheng98@gmail.com" }]
classifiers = ["Programming Language :: Python :: 3"]
urls = { Homepage = "https://github.com/yindaheng98/SimpleRefColorRestore" }
requires-python = ">=3"
dependencies = ["gaussian-splatting"]

# --- Setuptools-specific tables ---------------------------------------------

[tool.setuptools]
# Auto-discover all packages that start with one of the given globs
# (‘*’ is a wildcard, so both direct and nested modules are picked up)
packages = { find = { include = ["refcolorrestore*"] } }

# Keep the conventional “flat” layout (sources live beside pyproject.toml)
[tool.setuptools.package-dir]
"" = "."
